fix: 언어 선택 이미지 버그 픽스

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animejs": "^3.2.2",
     "axios": "^1.6.3",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
