--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "vite": "^5.0.8"
   }
