--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,12 +1,21 @@
-name: Example workflow for S3 Deploy
-on: [push]
+name: Deploy-S3
+
+on: 
+  push:
+    branches:
+      - main
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      AWS_DEFAULT_REGION: 'ap-northeast-2'
+
+    strategy:
+      matrix:
+        node-version: [18.x]
+    
     steps:
         - uses: actions/checkout@v1
 
@@ -19,7 +28,8 @@ jobs:
         - name: Deploy
           uses: lbertenasco/s3-deploy@v1
           with:
-            folder: build
+            folder: dist
             bucket: ${{ secrets.S3_BUCKET }}
             dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
             invalidation: / *
+
