build way modify

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,11 +19,11 @@ jobs:
     steps:
         - uses: actions/checkout@v1
 
-        - name: Install dependencies
-          run: yarn
+        - name: NPM Install
+          run: npm install
 
         - name: Build
-          run: yarn build
+          run: npm run build
 
         - name: Deploy
           uses: lbertenasco/s3-deploy@v1
