--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
           run: ls -l ${{ github.workspace }}/src/views
 
         - name: rename vue
-          run: git mv /src/components/Home /src/components/home
+          run: git mv ${{ github.workspace }}/src/components/Home ${{ github.workspace }}/src/components/home
 
         - name: NPM Install
           run: npm install
