--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,10 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: 'ap-northeast-2'
 
     strategy:
       matrix:
@@ -22,9 +18,6 @@ jobs:
           with:
             node-version: ${{ matrix.node-version }}
 
-        - name: List src/views directory
-          run: ls -l ${{ github.workspace }}/src/views
-
         - name: rename vue
           run: git mv ${{ github.workspace }}/src/components/Home ${{ github.workspace }}/src/components/home
 
@@ -33,6 +26,14 @@ jobs:
 
         - name: Build
           run: npm run build
+
+        - name: Configure AWS credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ap-northeast-2
+      
 
         - name: Deploy
           uses: lbertenasco/s3-deploy@v1
