--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
 
     strategy:
       matrix:
@@ -18,7 +22,7 @@ jobs:
           with:
             node-version: ${{ matrix.node-version }}
 
-        - name: rename vue
+        - name: rename
           run: git mv ${{ github.workspace }}/src/components/Home ${{ github.workspace }}/src/components/home
 
         - name: NPM Install
@@ -27,19 +31,11 @@ jobs:
         - name: Build
           run: npm run build
 
-        - name: Configure AWS credentials
-          uses: aws-actions/configure-aws-credentials@v1
-          with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ap-northeast-2
-      
-
         - name: Deploy
           uses: lbertenasco/s3-deploy@v1
           with:
-            folder: dist
-            bucket: ${{ secrets.BUCKET_NAME }}
-            dist-id: ${{ secrets.DISTRIBUTION_ID }}
+            folder: build
+            bucket: ${{ secrets.S3_BUCKET }}
+            dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
             invalidation: / *
 
