--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
           with:
             node-version: ${{ matrix.node-version }}
 
-        - name: rename
+        - name: rename dir
           run: git mv ${{ github.workspace }}/src/components/Home ${{ github.workspace }}/src/components/home
 
         - name: NPM Install
