refactor: 폴더 구조 변경

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueup/vue-quill": "^1.2.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.3",
     "pinia": "^2.1.7",
