--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
           with:
             node-version: ${{ matrix.node-version }}
             
-        - name: NPM Install
+        - name: Npm Install
           run: npm install
 
         - name: Build
