--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.8",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^3.3.11",
