--- a/package.json
+++ b/package.json
@@ -9,14 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^41.4.2",
+    "@ckeditor/ckeditor5-autoformat": "^41.4.2",
+    "@ckeditor/ckeditor5-basic-styles": "^41.4.2",
     "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-editor-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-essentials": "^41.4.2",
+    "@ckeditor/ckeditor5-image": "^41.4.2",
+    "@ckeditor/ckeditor5-indent": "^41.4.2",
+    "@ckeditor/ckeditor5-link": "^41.4.2",
+    "@ckeditor/ckeditor5-list": "^41.4.2",
+    "@ckeditor/ckeditor5-media-embed": "^41.4.2",
+    "@ckeditor/ckeditor5-paragraph": "^41.4.2",
+    "@ckeditor/ckeditor5-table": "^41.4.2",
+    "@ckeditor/ckeditor5-theme-lark": "^41.4.2",
+    "@ckeditor/ckeditor5-typing": "^41.4.2",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
-    "@vueup/vue-quill": "^1.2.0",
+    "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "animejs": "^3.2.2",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
-    "quill": "^2.0.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
