--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "animejs": "^3.2.2",
     "axios": "^1.6.8",
+    "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "swiper": "^11.1.4",
